Added a progress bar and select/deselect all. also rewrote a big part of it