@@ -1,9 +1,12 @@
 package me.cylorun;
 
 import com.google.gson.*;
+import org.apache.commons.io.FileUtils;
 
 import javax.swing.*;
 import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -16,22 +19,25 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static me.cylorun.FileUtil.*;
-
 public class MapCheckFrame extends JFrame {
     private JPanel mainPanel;
     private JButton downloadButton;
     private JButton addMapButton;
     private JTextField urlField;
     private JButton instSelectButton;
-    private List<String> selectedMaps = new ArrayList<>();
-    private List<String> instancePaths = new ArrayList<>();
-    public static List<String> downloadedMapsPaths = new ArrayList<>();
+    private JButton selectAllButton;
+    private JButton deSelectAllButton;
+    public static JProgressBar progressBar;
+    private static List<String> selectedMaps = new ArrayList<>();
+    private static List<String> instancePaths = new ArrayList<>();
+    private Map<JCheckBox, String> checkBoxes;
+    public static int currentStep = 0;
 
     public MapCheckFrame() throws IOException {
         mainPanel = new JPanel();
-
         downloadMapInfo();
+        checkBoxes = getCheckBoxes();
+
         initializeMainPanel();
         initializeActionListeners();
         this.setVisible(true);
@@ -65,12 +71,14 @@ public class MapCheckFrame extends JFrame {
     }
 
     private void addMapToJson(String path, String label, String url) {
-        JsonArray jsonArray = null;
+        JsonArray jsonArray;
         try {
             jsonArray = JsonParser.parseString(new String(Files.readAllBytes(Paths.get(path)))).getAsJsonArray();
         } catch (IOException e) {
+            exceptionPane(e);
             throw new RuntimeException(e);
         }
+        label = label.replace(".zip", "");
         JsonObject obj = new JsonObject();
         obj.addProperty("label", label);
         obj.addProperty("url", url);
@@ -81,17 +89,22 @@ public class MapCheckFrame extends JFrame {
         } catch (IOException e) {
             exceptionPane(e);
         }
-        JOptionPane.showMessageDialog(null, String.format("Added the map %s with the link: \n %s", label.replace(".zip", ""), url));
+        JOptionPane.showMessageDialog(null, String.format("Added the map %s with the link: \n %s", label, url));
         reloadUI();
     }
 
     private void initializeMainPanel() throws IOException {
-        int height = 170 + (mapCount() * 30);
+        int height = 170 + (countMaps() * 30);
 
         downloadButton = new JButton("Download");
         addMapButton = new JButton("Add");
         urlField = new JTextField();
         instSelectButton = new JButton("Select Instances");
+        progressBar = new JProgressBar(0, 100);
+        selectAllButton = new JButton("Select All");
+        deSelectAllButton = new JButton("Deselect All");
+
+        progressBar.setStringPainted(true);
 
         mainPanel.setLayout(null);
         mainPanel.setPreferredSize(new Dimension(300, height));
@@ -99,19 +112,29 @@ public class MapCheckFrame extends JFrame {
         mainPanel.add(addMapButton);
         mainPanel.add(urlField);
         mainPanel.add(instSelectButton);
+        mainPanel.add(progressBar);
+        mainPanel.add(deSelectAllButton);
+        mainPanel.add(selectAllButton);
         addCheckBoxes();
-
 
         downloadButton.setBounds(150, 20, 150, 40);
         instSelectButton.setBounds(0, 20, 150, 40);
+        selectAllButton.setBounds(0, 60, 150, 40);
+        deSelectAllButton.setBounds(150, 60, 150, 40);
         urlField.setBounds(10, height - 70, 270, 40);
         addMapButton.setBounds(10, height - 30, 60, 30);
+        progressBar.setBounds(12, height - 100, 265, 30);
 
     }
 
-    private void addCheckBoxes() throws IOException {
+    private Map<JCheckBox, String> getCheckBoxes() {
         Map<JCheckBox, String> checkBoxes = new HashMap<>();
-        String jsonContent = new String(Files.readAllBytes(Paths.get("maps.json")));
+        String jsonContent = null;
+        try {
+            jsonContent = new String(Files.readAllBytes(Paths.get("maps.json")));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         JsonArray ja = JsonParser.parseString(jsonContent).getAsJsonArray();
         for (JsonElement element : ja) {
             JsonObject jsonObject = element.getAsJsonObject();
@@ -120,7 +143,11 @@ public class MapCheckFrame extends JFrame {
             checkBoxes.put(new JCheckBox(label), url);
 
         }
-        int yPos = 70;
+        return checkBoxes;
+    }
+
+    private void addCheckBoxes() {
+        int yPos = 100;
         for (JCheckBox c : checkBoxes.keySet()) {
             c.addActionListener(e -> {
                 if (c.isSelected()) {
@@ -136,24 +163,21 @@ public class MapCheckFrame extends JFrame {
         }
     }
 
-    private int mapCount() throws IOException {
+    private int countMaps() throws IOException {
         String jsonContent = new String(Files.readAllBytes(Paths.get("maps.json")));
         JsonArray ja = JsonParser.parseString(jsonContent).getAsJsonArray();
-//        int i = 0;
-//        ja.size();
-//        for (JsonElement e : ja) {
-//            i++;
-//        }
         return ja.size();
     }
 
     private void initializeActionListeners() {
         addMapButton.addActionListener(e -> {
             String url = urlField.getText();
-            String mapName;
+            String mapName = "Unknown Map";
             if (url.endsWith(".zip") || url.endsWith(".rar")) {
                 String[] split = url.split("/");
-                mapName = split[split.length - 1].replace(".zip", "").replace(".rar", "");
+                if (split.length > 1) {
+                    mapName = split[split.length - 1].replace(".zip", "").replace(".rar", "");
+                }
             } else {
                 mapName = "Unknown Name";
             }
@@ -173,8 +197,7 @@ public class MapCheckFrame extends JFrame {
         });
 
         instSelectButton.addActionListener(e -> {
-            JFileChooser fileChooser = new JFileChooser();
-            fileChooser.setCurrentDirectory(new File(System.getProperty("user.home"), "Desktop"));
+            JFileChooser fileChooser = new JFileChooser(new File(System.getProperty("user.home"), "Desktop"));
             fileChooser.setMultiSelectionEnabled(true);
             fileChooser.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
 
@@ -197,11 +220,32 @@ public class MapCheckFrame extends JFrame {
                         );
 
                         if (choice == JOptionPane.YES_OPTION) {
-                            instancePaths.add(savesPath);
+                            instancePaths.add(mcDir.getParent());
                         }
                     }
                 }
             }
+        });
+
+        selectAllButton.addActionListener(a -> {
+            for (JCheckBox box : checkBoxes.keySet()) {
+                box.setSelected(true);
+                ActionEvent e = new ActionEvent(box, ActionEvent.ACTION_PERFORMED, "select");
+                for (ActionListener listener : box.getActionListeners()) {
+                    listener.actionPerformed(e);
+                }
+            }
+            System.out.println(selectedMaps);
+        });
+        deSelectAllButton.addActionListener(a -> {
+            for (JCheckBox box : checkBoxes.keySet()) {
+                box.setSelected(false);
+                ActionEvent e = new ActionEvent(box, ActionEvent.ACTION_PERFORMED, "select");
+                for (ActionListener listener : box.getActionListeners()) {
+                    listener.actionPerformed(e);
+                }
+            }
+
         });
     }
 
@@ -209,20 +253,34 @@ public class MapCheckFrame extends JFrame {
         JOptionPane.showMessageDialog(null, "Error occured" + e.toString());
     }
 
+    public static void updateProgressBar() {
+        currentStep++;
+        int progress = (int) ((double) currentStep / ((instancePaths.size() * selectedMaps.size()) + (selectedMaps.size() * 2)) * 100);
+        SwingUtilities.invokeLater(() -> progressBar.setValue(progress));
+        System.out.println("Progress set to: " + progress);
+    }
+
+    private void resetProgressBar() {
+        currentStep = 0;
+        SwingUtilities.invokeLater(() -> progressBar.setValue(0));
+    }
+
     private void downloadMaps() {
+        resetProgressBar();
         if (!instancePaths.isEmpty() || !selectedMaps.isEmpty()) {
-            FileUtil.downloadMaps(instancePaths.get(0), selectedMaps);
-            for (int i = 1; i < instancePaths.size(); i++) {
-                String instance = instancePaths.get(i);
-                for (String map : downloadedMapsPaths) {
-                    map = map.replace(".zip", "");
-                    copyFolder(new File(map), new File(instance));
-                }
-                downloadedMapsPaths.clear();
+            List<String> downloadedMapsPaths = FileUtil.downloadToTemp(selectedMaps);
+            FileUtil.copyFromTemp(instancePaths, downloadedMapsPaths);
+            try {
+                FileUtils.deleteDirectory(new File(Path.of(System.getProperty("user.dir"), "mc_temp").toString()));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
+            Toolkit.getDefaultToolkit().beep();
             JOptionPane.showMessageDialog(null, "Finished downloading", "Download Status", JOptionPane.INFORMATION_MESSAGE);
-        } else
+        } else {
+            Toolkit.getDefaultToolkit().beep();
             JOptionPane.showMessageDialog(null, "No maps or instances selected", "Download Status", JOptionPane.WARNING_MESSAGE);
 
+        }
     }
 }
